--- a/index.htm
+++ b/index.htm
@@ -109,11 +109,12 @@
       const resultDiv = document.getElementById("result");
 
       if (data[regNo]) {
-        resultDiv.innerHTML = `<a href="${data[regNo]}" target="_blank">✨ View Your PDF ✨</a>`;
+        resultDiv.innerHTML = `<a href="${data[regNo]}" target="_blank">✨ View Your Status ✨</a>`;
       } else {
-        resultDiv.innerHTML = "❌ No record found for this Registration Number.";
+        resultDiv.innerHTML = "❌ No record found for this Registration Number. Recheck your Registration Number or Contact Support.";
       }
     }
   </script>
 </body>
 </html>
+
